# dataproxy

./: .bazelrc  .clang-format  .gitignore  .licenserc.yaml  Makefile  README.md  README.zh-CN.md  WORKSPACE  pom.xml
.circleci/: config.yml  continue-config.yml  release-config.yml
.github/workflows/: deploy.yml
config/: application.yaml
dataproxy-api/: pom.xml
dataproxy-common/: pom.xml
dataproxy-common/src/main/java/org/secretflow/dataproxy/common/exceptions/: DataproxyErrorCode.java  DataproxyException.java  ErrorLevels.java  ErrorTypes.java
dataproxy-common/src/main/java/org/secretflow/dataproxy/common/model/: FlightContentFormatConfig.java  FlightContentFormatTypeEnum.java  InferSchemaResult.java
dataproxy-common/src/main/java/org/secretflow/dataproxy/common/model/command/: Command.java  CommandInfo.java  CommandTypeEnum.java  DatasetReadCommand.java  DatasetWriteCommand.java
dataproxy-common/src/main/java/org/secretflow/dataproxy/common/model/dataset/: DataSceneEnum.java  Dataset.java  DatasetFormatConfig.java  DatasetSchema.java
dataproxy-common/src/main/java/org/secretflow/dataproxy/common/model/dataset/format/: CSVFormatConfig.java  DatasetFormatTypeEnum.java  FormatConfig.java  IndexType.java  PartitionBehavior.java  TableFormatConfig.java  TableIndex.java
dataproxy-common/src/main/java/org/secretflow/dataproxy/common/model/dataset/schema/: DataField.java  DataFieldTypeEnum.java  DatasetSchemaTypeEnum.java  FastDFSchema.java  StructuredDataSchema.java
dataproxy-common/src/main/java/org/secretflow/dataproxy/common/model/datasource/: DatasetLocationConfig.java  Datasource.java  DatasourceConnConfig.java  DatasourceSchemaConfig.java  DatasourceTypeEnum.java
dataproxy-common/src/main/java/org/secretflow/dataproxy/common/model/datasource/conn/: ConnConfig.java  JdbcBaseConnConfig.java  LocalFileSystemConnConfig.java  MinioConnConfig.java  MysqlConnConfig.java  ObjectFileSystemConnConfig.java  OdpsConnConfig.java
dataproxy-common/src/main/java/org/secretflow/dataproxy/common/serializer/: SensitiveDataSerializer.java  package-info.java
dataproxy-common/src/main/java/org/secretflow/dataproxy/common/utils/: DPStringUtils.java  GrpcUtils.java  IdUtils.java  JsonUtils.java  ProtoBufJsonUtils.java
dataproxy-integration-tests/: pom.xml
dataproxy-integration-tests/src/main/java/org/secretflow/dataproxy/integration/tests/: DPFlightClient.java  DataproxyKusciaTest.java  KusciaConnectorConfig.java  TestDataUtils.java
dataproxy-integration-tests/src/main/java/org/secretflow/dataproxy/integration/tests/config/: LocalHostKusciaConnectorConfig.java  MysqlKusciaConnectorConfig.java  OssKusciaConnectorConfig.java
dataproxy-manager/: pom.xml
dataproxy-manager/src/main/java/org/secretflow/dataproxy/manager/: Connector.java  DataReader.java  DataWriter.java  SplitReader.java
dataproxy-manager/src/main/java/org/secretflow/dataproxy/manager/connector/filesystem/: BinaryFileDataReader.java  BinaryFileDataWriter.java  BinaryFileSplitReader.java  CSVDataReader.java  CSVDataWriter.java  CSVSplitReader.java  FileSystemConnector.java
dataproxy-manager/src/main/java/org/secretflow/dataproxy/manager/connector/odps/: OdpsConnector.java  OdpsDataReader.java  OdpsDataWriter.java  OdpsResourceReader.java  OdpsResourceSplitReader.java  OdpsResourceWriter.java  OdpsSplitArrowReader.java  OdpsUtil.java
dataproxy-manager/src/main/java/org/secretflow/dataproxy/manager/connector/rdbms/: JdbcAssistant.java  JdbcConnector.java  JdbcDataReader.java  JdbcDataWriter.java  JdbcSplitReader.java  MysqlJdbcAssistant.java
dataproxy-server/: pom.xml
dataproxy-server/src/main/java/org/secretflow/dataproxy/server/: DataProxyApplication.java  DataproxyLauncher.java  FlightServerTraceMiddleware.java  ProtoObjConvertor.java
dataproxy-server/src/main/java/org/secretflow/dataproxy/server/config/: ArrowConfig.java
dataproxy-server/src/main/java/org/secretflow/dataproxy/server/flight/: DataproxyProducer.java  DataproxyProducerImpl.java
dataproxy-server/src/main/resources/: application.yaml  logback-spring.xml
dataproxy-service/: pom.xml
dataproxy-service/src/main/java/org/secretflow/dataproxy/service/: DataProxyService.java  TicketService.java
dataproxy-service/src/main/java/org/secretflow/dataproxy/service/impl/: DataProxyServiceDirectImpl.java  TicketServiceImpl.java
dataproxy_sdk/: BUILD.bazel
dataproxy_sdk/bazel/: BUILD.bazel  arrow.BUILD  brotli.BUILD  bzip2.BUILD  defs.bzl  double_conversion.BUILD  lz4.BUILD  orc.BUILD  rapidjson.BUILD  repositories.bzl  snappy.BUILD  thrift.BUILD  xsimd.BUILD  zstd.BUILD
dataproxy_sdk/cc/: BUILD.bazel  api.h  data_proxy_conn.cc  data_proxy_conn.h  data_proxy_conn_test.cc  data_proxy_file.cc  data_proxy_file.h  data_proxy_file_test.cc  data_proxy_pb.cc  data_proxy_pb.h  data_proxy_pb_test.cc  exception.h  file_help.cc  file_help.h  file_help_test.cc  utils.cc  utils.h
dataproxy_sdk/proto/: BUILD.bazel  data_proxy_pb.proto
dataproxy_sdk/python/: BUILD.bazel  __init__.py  dp_file_adapter.py  dp_pb2.py  libdataproxy.cc  requirements.txt  setup.py
dataproxy_sdk/python/dataproxy/: BUILD.bazel  __init__.py  dp_file_adapter.py  dp_pb2.py  libdataproxy.cc  sdk.py  version.py
dataproxy_sdk/test/: BUILD.bazel  data_mesh_mock.cc  data_mesh_mock.h  random.cc  random.h  test_utils.cc  test_utils.h
docs/: conf.py  index.rst
docs/development/: build_dataproxy_cn.md  index.rst
proto/kuscia/: common.proto  domaindata.proto  domaindatasource.proto  flightdm.proto  flightinner.proto
scripts/: build.sh  build_base.sh  build_image.sh  start_dp.sh
(+61 files in other folders)
