# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//dataproxy_sdk/bazel:defs.bzl", "dataproxy_cc_library", "dataproxy_cc_test")

package(default_visibility = ["//visibility:public"])

dataproxy_cc_library(
    name = "dataproxy_sdk_cc",
    hdrs = [
        "api.h",
    ],
    deps = [
        ":data_proxy_file",
    ],
)

dataproxy_cc_library(
    name = "exception",
    hdrs = [
        "exception.h",
    ],
    deps = [
        "@yacl//yacl/base:exception",
    ],
)

dataproxy_cc_library(
    name = "utils",
    srcs = ["utils.cc"],
    hdrs = ["utils.h"],
    deps = [
        ":exception",
        "@org_apache_arrow//:arrow",
    ],
)

dataproxy_cc_library(
    name = "proto",
    srcs = ["data_proxy_pb.cc"],
    hdrs = ["data_proxy_pb.h"],
    deps = [
        ":exception",
        "//dataproxy_sdk/proto:data_proxy_proto_cc",
        "@kuscia//proto/api/v1alpha1/datamesh:flightdm_cc_proto",
    ],
)

dataproxy_cc_library(
    name = "file_help",
    srcs = ["file_help.cc"],
    hdrs = ["file_help.h"],
    deps = [
        ":exception",
        ":proto",
        "@org_apache_arrow//:arrow",
    ],
)

dataproxy_cc_test(
    name = "file_help_test",
    srcs = ["file_help_test.cc"],
    deps = [
        "utils",
        ":exception",
        ":file_help",
        "@org_apache_arrow//:arrow",
    ],
)

dataproxy_cc_library(
    name = "data_proxy_conn",
    srcs = ["data_proxy_conn.cc"],
    hdrs = ["data_proxy_conn.h"],
    deps = [
        ":exception",
        "@org_apache_arrow//:arrow_flight",
    ],
)

dataproxy_cc_library(
    name = "data_proxy_file",
    srcs = ["data_proxy_file.cc"],
    hdrs = ["data_proxy_file.h"],
    deps = [
        ":data_proxy_conn",
        ":exception",
        ":file_help",
        ":proto",
        ":utils",
        "@org_apache_arrow//:arrow_flight",
    ],
)
