# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "exported_symbols.lds",
        "version_script.lds",
    ],
    visibility = ["//visibility:private"],
)

pybind_extension(
    name = "libdataproxy",
    srcs = ["libdataproxy.cc"],
    linkopts = select({
        "@bazel_tools//src/conditions:darwin": [
            "-Wl,-exported_symbols_list,$(location //dataproxy_sdk/python:exported_symbols.lds)",
        ],
        "//conditions:default": [
            "-Wl,--version-script,$(location //dataproxy_sdk/python:version_script.lds)",
        ],
    }),
    deps = [
        ":exported_symbols.lds",
        ":version_script.lds",
        "//dataproxy_sdk/cc:dataproxy_sdk_cc",
    ],
)

py_library(
    name = "data_proxy_file_py",
    srcs = [
        "dp_file_adapter.py",
    ],
    data = [
        ":libdataproxy.so",
    ],
)

py_library(
    name = "protos",
    srcs = [
        "dp_pb2.py",
        "//dataproxy_sdk/proto:data_proxy_proto_py",
    ],
)

py_library(
    name = "init",
    srcs = [
        "__init__.py",
        ":data_proxy_file_py",
        ":protos",
    ],
)
