# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//dataproxy_sdk/bazel:defs.bzl", "dataproxy_cc_library")

package(default_visibility = ["//visibility:public"])

dataproxy_cc_library(
    name = "random",
    srcs = ["random.cc"],
    hdrs = ["random.h"],
    deps = [
        "//dataproxy_sdk/cc:exception",
        "@org_apache_arrow//:arrow",
    ],
)

dataproxy_cc_library(
    name = "data_mesh_mock",
    srcs = ["data_mesh_mock.cc"],
    hdrs = ["data_mesh_mock.h"],
    deps = [
        "@org_apache_arrow//:arrow_flight",
    ],
)

dataproxy_cc_library(
    name = "test_utils",
    srcs = ["test_utils.cc"],
    hdrs = ["test_utils.h"],
    deps = [
        "//dataproxy_sdk/cc:proto",
    ],
)
